profile menu v0.01 update

--- a/src/app.html
+++ b/src/app.html
@@ -3,12 +3,26 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>Time menager</title>
-		<link rel="icon" href="%sveltekit.assets%/favicon75.ico"/>
+		<link rel="icon" href="%sveltekit.assets%/favicon76.ico"/>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		%sveltekit.head%
 		<style>
 			:root {
-				--background: #000000;
+				--1: #845EC2;
+				--2: #D65DB1;
+				--3: #FF6F91;
+				--4: #FF9671;
+				--5: #FFC75F;
+				--6: #F9F871;
+				--white: white;
+			}
+
+			* {
+				margin: 0;
+				padding: 0;
 			}
 		</style>
 	</head>
