Working landing page

--- a/src/app.html
+++ b/src/app.html
@@ -11,12 +11,12 @@
 		%sveltekit.head%
 		<style>
 			:root {
-				--1: #845EC2;
-				--2: #D65DB1;
-				--3: #FF6F91;
-				--4: #FF9671;
-				--5: #FFC75F;
-				--6: #F9F871;
+				--1: #0D1B2A;
+				--2: #354253;
+				--3: #606D80;
+				--4: #8E9BAF;
+				--5: #AAB8CC;
+				--6: #BFCDE2;
 				--white: white;
 				--grey: #4d4b50;
 			}
