--- a/src/app.html
+++ b/src/app.html
@@ -2,12 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8"/>
-		<title>Time menager</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<title>TimeRush</title>
 		<link rel="icon" href="src/lib/img/logo1.png"/>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
-		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Playwrite+HR+Lijeva:wght@200&display=swap" rel="stylesheet">
